Add upload page access button for admins

--- a/public/index.html
+++ b/public/index.html
@@ -896,5 +896,28 @@
             if (event.target === uploadModal) closeUploadModal();
         }
     </script>
+      }
+    <!-- زر الوصول لصفحة الرفع (للمسؤولين فقط) -->
+    <div style="text-align: center; margin-top: 50px; margin-bottom: 50px;">
+        <a href="/upload.html" style="
+            display: inline-block;
+            padding: 15px 30px;
+            background-color: #007bff; /* لون أزرق جذاب */
+            color: white;
+            text-align: center;
+            text-decoration: none;
+            border-radius: 8px;
+            font-size: 18px;
+            font-weight: bold;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: background-color 0.3s ease;
+        " onmouseover="this.style.backgroundColor='#0056b3'" onmouseout="this.style.backgroundColor='#007bff'">
+            صفحة رفع الملفات (للمسؤول)
+        </a>
+    </div>
+    <!-- نهاية زر الوصول لصفحة الرفع -->
+</body>
+</html>
+
 </body>
 </html>
